@@ -2,6 +2,8 @@ docker.io (0.7.1+dfsg1-2) UNRELEASED; urgency=medium
 
   * Added contrib/mk* scripts from upstream into /usr/share/docker.io/contrib
     (Closes: #736068).
+  * Added upstream udev rules file to stop device-mapper devices and mounts from
+    appearing in desktop environments through udisks.
 
  -- Tianon Gravi <admwiggin@gmail.com>  Sun, 19 Jan 2014 20:42:13 +0000
 
